# Brain-Bee

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  verify_demo.py
src/brain_bee/: __init__.py  main.py
src/brain_bee/harness/: config.py  settings.py
src/brain_bee/llm/: __init__.py  backend.py  tokenizer.py
src/brain_bee/manifests/: CONSTITUTION.md  dream.md  roles.yaml  security_policies.yaml  summarization.md  system.yaml
src/brain_bee/manifests/roles/: orchestrator.md  queen.md  worker.md
src/brain_bee/runtime/: agent.py  factory.py  guardrails.py  transport_base.py
src/brain_bee/transports/cli/: _rich_renderer.py  terminal.py
tests/: test_system.py
